# runai

./: .gitignore  CHANGELOG.md  DELELELELELELELELLE  DESIGN-NOTES.md  LICENSE.md  OAI_CONFIG_LIST.gpt4preview  OAI_CONFIG_LIST.template  README.md  agent.py  defaultsettings.py  djabout.py  djargs.py  djgrep.py  djrefactor.py  djrunbuild.py  djsettings.py  djtask.py  djtasktypes.py  djversion.py  dual_output.py  globals.py  helper_functions.py  main.py  pyproject.toml  refactor.py  requirements-autogen.txt  requirements.txt  runai  runai.cmd  task.txt  task_refactor.txt  tasks.txt  todo.md
bin-win/: runai  runai.cmd
examples/: shell-computer.md
run_ai/: _version.py  cli.py  djabout.py  djapp.py  djargs.py  djrefactor.py  djrunbuild.py  djsettings.py  djtask.py  djversion.py  dual_output.py  globals.py  helper_functions.py  main.py  modelspec.py
run_ai/backends/: anthropic.py  autogen.py  autogendetect.py  base.py  djchat.py  dummy.py  gemini.py  openai.py  selector.py
run_ai/config/: display.py  settings.py
run_ai/djautogen/: djautogen.py  settings.py
tasks/: runai_examples.sh
tasks/autodictionary/: README.md  input.txt  task.txt
tasks/copyright/: settings.py  task.txt
tasks/cpp_classes/: input.txt
tasks/printf/: settings.py  task.txt
tasks/replace/: autosettings.py  task.txt
tasks/tStrAppend/: settings.py  settings_simple.py  task.txt
tasks/test/: README.md  runai.autotask.txt
tests/: examples.md  tests-local.sh  tests.sh
