[project]
name = "run-ai"
version = "0.8.3"
description = "General AI/LLM-driven task automation tool"
authors = [{ name = "David Joffe" }]
license = "commercial"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pyautogen",
    "requests",
    "colorama",
]

[project.scripts]
runai = "run_ai.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
